view games with events + small fixes
